[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/microgames/top/TopMain.gd" type="Script" id=1]
[ext_resource path="res://scenes/microgames/top/SpinningTop.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/microgames/reusable/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/arrow0.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/arrow2.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/arrow1.png" type="Texture" id=6]


[sub_resource type="AnimatedTexture" id=1]
frames = 3
fps = 10.0
frame_0/texture = ExtResource( 4 )
frame_1/texture = ExtResource( 6 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 5 )
frame_2/delay_sec = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 321.339, 12.4059 )

[node name="TopMain" type="Node"]
script = ExtResource( 1 )

[node name="Arrows" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.362
margin_top = 100.0
margin_bottom = 46.24
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 215
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureRect" parent="Arrows"]
margin_left = 68.0
margin_right = 212.0
margin_bottom = 120.0
rect_min_size = Vector2( 144, 120 )
texture = SubResource( 1 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="TextureRect" parent="Arrows"]
margin_left = 427.0
margin_right = 571.0
margin_bottom = 120.0
rect_min_size = Vector2( 144, 120 )
texture = SubResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverArea" type="StaticBody2D" parent="."]
position = Vector2( 319, 399 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameOverArea"]
shape = SubResource( 2 )

[node name="SpinningTop" parent="." instance=ExtResource( 2 )]
position = Vector2( 320, 400 )

[node name="WinTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="HUD" parent="." instance=ExtResource( 3 )]
[connection signal="trompo_lose" from="." to="HUD" method="_on_lose"]
[connection signal="trompo_lose" from="." to="SpinningTop" method="_on_game_ended"]
[connection signal="trompo_win" from="." to="HUD" method="_on_win"]
[connection signal="trompo_win" from="." to="SpinningTop" method="_on_game_ended"]
[connection signal="top_fell" from="SpinningTop" to="." method="_on_SpinningTop_fell"]
[connection signal="timeout" from="WinTimer" to="." method="_on_WinTimer_timeout"]
[connection signal="message_over" from="HUD" to="." method="_on_HUD_message_over"]
